--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,9 +5,6 @@ jobs:
       # specify the version you desire here
       - image: circleci/openjdk:11-jdk
     working_directory: /tmp/workspace
-    environment:
-      # Customize the JVM maximum heap limit
-      MAVEN_OPTS: -Xmx3200m
     steps:
       - checkout
       - run: mkdir -p /tmp/workspace
@@ -17,7 +14,7 @@ jobs:
             - v1-dependencies-{{ checksum "pom.xml" }}
             # fallback to using the latest cache if no exact match is found
             - v1-dependencies-
-      - run: mvn dependency:go-offline
+
       - run: mvn clean install -DskipTests
       - save_cache:
           paths:
@@ -34,7 +31,7 @@ jobs:
       - run: ls -a /tmp/workspace
       - run:
           name: Create Docker image and push to ECR
-          command: aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 325129022402.dkr.ecr.us-east-1.amazonaws.com && docker build -t ticketingappecr /tmp/workspace && docker tag ticketingappecr:latest 325129022402.dkr.ecr.us-east-1.amazonaws.com/ticketingappecr:latest && docker push 325129022402.dkr.ecr.us-east-1.amazonaws.com/ticketingappecr:latest
+          command: aws ecr get-login-password --region eu-west-2 | docker login --username AWS --password-stdin 289073749577.dkr.ecr.eu-west-2.amazonaws.com && docker build -t ticketinapp /tmp/workspace && docker tag ticketinapp:latest 289073749577.dkr.ecr.eu-west-2.amazonaws.com/ticketinapp:latest && docker push 289073749577.dkr.ecr.eu-west-2.amazonaws.com/ticketinapp:latest
   deploy-job:
     docker:
       #specify the version you desire here
@@ -43,7 +40,7 @@ jobs:
       - run:
           name: Execute Deployment Script
           command: |
-            ssh -o "StrictHostKeyChecking=no" ec2-user@ec2-3-92-208-10.compute-1.amazonaws.com <<'ENDSSH'
+            ssh -o "StrictHostKeyChecking=no" ec2-user@ec2-13-41-193-175.eu-west-2.compute.amazonaws.com <<'ENDSSH'
             /bin/bash bin/deploy_image.sh
             docker ps
 workflows:
